Fixed arrow/timeline shifting issue

--- a/style.css
+++ b/style.css
@@ -110,8 +110,11 @@ h2 {
       font-size: 1.1em;
       line-height: 1.2em; }
 
+#next {
+  position: absolute; }
+
 #prev {
-  width: 150px; }
+  position: absolute; }
 
 main {
   background-color: rgba(255, 255, 255, 0.6);
